// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trix-editor can mount "read only" TrixEditor 1`] = `
<div class="SharpTrix editor SharpTrix--read-only">
	<div class="card">
		<trix-toolbar id="trix-toolbar-WYSIWYG_TEST" class="card-header editor__toolbar">
			<trix-custom-toolbar-stub toolbar="bold,italic,|,link"></trix-custom-toolbar-stub>
		</trix-toolbar>
		<trix-editor contenteditable="" role="textbox" input="trix-input-WYSIWYG_TEST" toolbar="trix-toolbar-WYSIWYG_TEST" placeholder="placeholder" class="card-body form-control" style="height: 199px; max-height: 199px;"></trix-editor>
	</div>
	<input id="trix-input-WYSIWYG_TEST" type="hidden" value="<div>Wysiwyg text</div>">
</div>
`;

exports[`trix-editor can mount TrixEditor 1`] = `
<div class="SharpTrix editor">
	<div class="card">
		<trix-toolbar id="trix-toolbar-WYSIWYG_TEST" class="card-header editor__toolbar">
			<trix-custom-toolbar-stub toolbar="bold,italic,|,link"></trix-custom-toolbar-stub>
		</trix-toolbar>
		<trix-editor contenteditable="" role="textbox" input="trix-input-WYSIWYG_TEST" toolbar="trix-toolbar-WYSIWYG_TEST" placeholder="placeholder" class="card-body form-control" style="height: 199px; max-height: 199px;"></trix-editor>
	</div>
	<input id="trix-input-WYSIWYG_TEST" type="hidden" value="<div>Wysiwyg text</div>">
</div>
`;
